# PatchComparison

./: .gitignore  .gitmodules  AveragePixelDifference.h  AveragePixelDifference.hpp  AverageScore.hpp  AverageValueDifference.h  AverageValueDifference.hpp  CMakeLists.txt  CompareBadPatches.cpp  CorrelationScore.h  CorrelationScore.hpp  DiffusionDistance.cpp  DiffusionDistance.h  DiffusionDistance.hpp  HistogramDistance.h  HistogramDistance.hpp  LocalPCADistance.h  LocalPCADistance.hpp  PairReader.cpp  PairReader.h  PatchComparison.cpp  PatchComparison.h  PatchDistance.h  PatchDistance.hpp  PixelDifferences.h  PixelDifferences.hpp  PotentialBadMatches.cpp  ProjectedDistance.h  ProjectedDistance.hpp  README.md  SSD.cpp  SSD.h  SSD.hpp  SelfDeviationWeightedSSD.h  SelfDeviationWeightedSSD.hpp  SelfPatchCompare.cpp  SelfPatchCompare.h  SelfPatchCompare.hpp  SelfPatchCompareLocalOptimization.h  SelfPatchCompareLocalOptimization.hpp  (+11 more)
Drivers/: CMakeLists.txt  CompareOverBlur.cpp  ComparePatches.cpp  Example.cpp
Tests/: CMakeLists.txt  DiffusionDistanceTest.cpp  TestPatchComparison.cpp  TestPixelDifferences.cpp  TestSelfPatchCompare.cpp  TestSelfPatchCompareLocalOptimization.cpp
